<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_art_orders">

    <fragment
        android:id="@+id/nav_art_order"
        android:name="info.hccis.islandartstore.ui.artorder.ArtOrderFragment"
        android:label="@string/menu_add_order"
        tools:layout="@layout/fragment_art_order" />

    <fragment
        android:id="@+id/nav_art_orders"
        android:name="info.hccis.islandartstore.ui.artorders.ArtOrdersFragment"
        android:label="@string/menu_art_orders"
        tools:layout="@layout/fragment_art_orders" />

    <fragment
        android:id="@+id/nav_social"
        android:name="info.hccis.islandartstore.ui.social.SocialFragment"
        android:label="@string/menu_social"
        tools:layout="@layout/fragment_social" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="info.hccis.islandartstore.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_service"
        android:name="info.hccis.islandartstore.ui.service.ServiceFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_service" />
    <fragment
        android:id="@+id/nav_qrcode"
        android:name="info.hccis.islandartstore.ui.service.QrCodeFragment"
        android:label="@string/menu_qrcode"
        tools:layout="@layout/fragment_qrcode" />

</navigation>